--- a/lib/libangou/dune
+++ b/lib/libangou/dune
@@ -1,5 +1,5 @@
 (library
  (name libangou)
- (libraries dune-build-info cbindings mirage-crypto-ec util xdg yojson)
+ (libraries cbindings mirage-crypto-ec util xdg yojson)
  (preprocess
   (pps ppx_deriving_yojson)))
